--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,19 @@
-
+@import "./utils/variables";
+@import "./base/reset";
+@import "./layout/header";
+@import "./base/common";
+@import "./utils/hidden";
+@import "./components/container";
+@import "./components/navigation";
+@import "./components/logo";
+@import "./components/contacts";
+@import "./components/btn";
+@import "./base/section";
+@import "./layout/hero";
+@import "./layout/description";
+@import "./layout/about";
+@import "./layout/team";
+@import "./layout/clients";
+@import "./layout/footer";
+@import "./layout/modal";
+@import "./layout/portfolio";
