--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,7 +4,7 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  display: flex; /* поставив елементи хедера в ряд */
+  display: flex;
   align-items: center;
   border-bottom: 1px solid #ececec;
   justify-content: center;
