--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,33 +1,30 @@
-.contacts {
+.contact {
   display: flex;
   margin-left: auto;
   justify-content: center;
   align-items: center;
-}
 
-.contact_item {
-  display: block;
-  &:not(:last-child) {
-    margin-right: 50px;
+  &_item {
+    color: var(--text-color-gray);
+    display: block;
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
   }
-}
 
-.contact_link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  &_link {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
 
-.contacts li {
-  color: var(--text-color-gray);
-}
-
-.contact_icon {
-  fill: currentColor;
-  margin-right: 10px;
-  &:hover,
-  &:focus {
-    fill: var(--accent-color);
+  &_icon {
+    fill: currentColor;
+    margin-right: 10px;
+    &:hover,
+    &:focus {
+      fill: var(--accent-color);
+    }
   }
 }
