--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,31 +1,30 @@
-.nav-main {
+.nav {
   display: flex;
   align-items: center;
   margin-left: 93px;
-}
 
-.nav-list {
-  display: flex;
-  align-items: center;
-  padding-left: 0px;
-}
+  &-list {
+    display: flex;
+    align-items: center;
+    padding-left: 0px;
 
-.nav-list_item li:not(:last-child) {
-  margin-right: 50px;
-}
+    &_item li:not(:last-child) {
+      margin-right: 50px;
+    }
 
-.nav-list_item:not(:last-child) {
-  margin-right: 50px;
-}
+    &_item:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
 
-.nav_link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav_link.current {
-  color: var(--accent-color);
+  &_link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &.current {
+      color: var(--accent-color);
+    }
+  }
 }
 
 .current {
