--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -7,6 +7,10 @@ footer {
   background-color: var(--background-color);
 }
 
+.container.footer {
+  display: flex;
+}
+
 address {
   margin-top: 20px;
   font-style: normal;
@@ -15,6 +19,10 @@ address {
 address ul {
   padding-left: 0px;
   margin: 0px;
+}
+
+.address-container {
+  margin-right: 70px;
 }
 
 .address {
@@ -28,14 +36,6 @@ address ul {
 
 .address-item:not(:last-child) {
   margin-bottom: 9px;
-}
-
-.container.footer {
-  display: flex;
-}
-
-.address-container {
-  margin-right: 70px;
 }
 
 .join-us {
@@ -76,7 +76,7 @@ address ul {
   padding-left: 15px;
 }
 
-.footer-btn {
+.subscribe-btn {
   display: inline-flex;
   align-items: center;
   text-align: center;
@@ -94,6 +94,7 @@ address ul {
   letter-spacing: 0.06em;
   color: #ffffff;
   cursor: pointer;
+
   &:hover,
   &:focus {
     background: #188ce8;
