--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,76 +1,25 @@
 .team {
   background-color: var(--background-team-color);
-}
 
-.team-card {
-  flex-basis: calc((100% - var(--gap) * (4 - 1)) / 4);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-  background-color: #ffffff;
-}
-
-.name-wrap {
-  padding: 30px;
+  &__card {
+    flex-basis: calc((100% - var(--gap) * (4 - 1)) / 4);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    background-color: #ffffff;
+  }
 }
 
 .name {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
+  @include fontProperties(500, 16px, 1.18);
   justify-content: space-between;
   text-align: center;
   margin-bottom: 10px;
-}
-
-.job {
-  text-align: center;
-  line-height: 1.18;
-}
-
-.socials-list {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: var(--text-color-gray);
-  margin-left: auto;
-  margin-right: auto;
-  padding: 0px;
-  margin-top: 16px;
-}
-
-.socials-item {
-  fill: currentColor;
-  border-radius: 50%;
-  color: #afb1b8;
-
-  &:not(:last-child) {
-    margin-right: 10px;
+  &__wrap {
+    padding: 30px;
   }
-}
-
-.socials-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover,
-  &:focus {
-    color: var(--text-color-white);
-    background-color: var(--accent-color);
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
-}
-
-.socials-icon {
-  fill: currentColor;
-
-  &:hover {
-    fill: var(--text-color-white);
+  &__job {
+    text-align: center;
+    line-height: 1.18;
   }
 }
