--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,17 @@
 @charset "UTF-8";
+body {
+  font-family: "Roboto", sans-serif;
+  /* основний шрифт сайту */
+  font-size: 16px;
+  color: var(--primary-text-color);
+  letter-spacing: 0.03em;
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 :root {
   --primary-text-color: #212121;
   --accent-color: #2196f3;
@@ -30,26 +43,19 @@ dd {
 }
 
 .header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  display: flex;
-  align-items: center;
   border-bottom: 1px solid #ececec;
-  justify-content: center;
 }
 .header .container {
   display: flex;
   align-items: center;
-}
-
-body {
-  font-family: "Roboto", sans-serif;
-  /* основний шрифт сайту */
-  font-size: 16px;
-  color: var(--primary-text-color);
-  letter-spacing: 0.03em;
+  justify-content: center;
 }
 
 li {
@@ -115,30 +121,30 @@ img {
   align-items: center;
   margin-left: 93px;
 }
-.nav-list {
+.nav__list {
   display: flex;
   align-items: center;
   padding-left: 0px;
 }
-.nav-list_item li:not(:last-child) {
+.nav__item li:not(:last-child) {
   margin-right: 50px;
 }
-.nav-list_item:not(:last-child) {
+.nav__item:not(:last-child) {
   margin-right: 50px;
 }
-.nav_link {
+.nav__link {
   padding-top: 32px;
   padding-bottom: 32px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav_link.current {
+.nav__link.current {
   color: var(--accent-color);
 }
 
-.current {
+.nav__link--current {
   position: relative;
 }
-.current::after {
+.nav__link--current::after {
   content: "";
   position: absolute;
   bottom: -1px;
@@ -153,25 +159,22 @@ img {
   font-family: "Raleway";
   font-weight: 700;
   font-size: 26px;
-  line-height: 1.2px;
+  line-height: 1.2;
   color: var(--accent-color);
   letter-spacing: 0.03em;
 }
-.logo-color-up {
+.logo__color--up {
   color: var(--primary-text-color);
 }
-.logo-color-down {
+.logo__color--down {
   color: var(--text-color-white);
-}
-.logo.down {
-  margin-bottom: 20px;
 }
 
 .contact {
   display: flex;
-  margin-left: auto;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  margin-left: auto;
 }
 .contact_item {
   color: var(--text-color-gray);
@@ -194,7 +197,7 @@ img {
   fill: var(--accent-color);
 }
 
-.button-style {
+.button__style {
   background: var(--button-background);
   border-radius: 4px;
   border: 1px solid transparent;
@@ -204,38 +207,32 @@ img {
   line-height: 1.6;
   cursor: pointer;
 }
-.button-style:hover, .button-style:focus {
+.button__style:hover, .button__style:focus {
   background-color: var(--accent-color);
   color: var(--text-color-white);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
 
-.hero-button {
+.hero__button {
   font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
   letter-spacing: 0.06em;
   background-color: var(--accent-color);
   color: var(--text-color-white);
-  height: 50px;
-  align-items: center;
-  justify-content: center;
   border: 1px solid var(--accent-color);
   margin: 0 auto;
   padding: 10px 32px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero-button:hover {
+.hero__button:hover {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 
-.section {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
-.hero-section {
+.hero {
   background-color: var(--background-color);
   margin: 0 auto;
   padding-top: 200px;
@@ -249,8 +246,7 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
-
-.hero-text {
+.hero__text {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -270,21 +266,21 @@ img {
   margin-bottom: 50px;
 }
 
-.benefits-item {
+.benefits__item {
   flex-basis: calc((100% - var(--gap) * 3) / 4);
 }
 
-.benefits-icon_wrap {
+.benefits__wrap {
   display: flex;
-  height: 120px;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  height: 120px;
   border-radius: 4px;
   background-color: var(--button-background);
   margin-bottom: 30px;
 }
 
-.benefits-item_descrip {
+.benefits__descrip {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -296,18 +292,17 @@ img {
   font-size: 14px;
   padding-top: 0;
 }
-
-.about-item {
+.about__item {
   flex-basis: calc((100% - var(--gap) * (var(--cols) - 1)) / var(--cols));
   position: relative;
 }
-.about-item_img {
+.about__img {
   position: relative;
 }
-.about-item_box {
+.about__box {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
   margin-left: auto;
   margin-right: auto;
@@ -317,7 +312,7 @@ img {
   bottom: 0px;
   background: rgba(47, 48, 58, 0.8);
 }
-.about-item_descrip {
+.about__descrip {
   color: #ffffff;
   text-transform: uppercase;
   text-align: center;
@@ -329,16 +324,11 @@ img {
 .team {
   background-color: var(--background-team-color);
 }
-
-.team-card {
+.team__card {
   flex-basis: calc((100% - var(--gap) * 3) / 4);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
-}
-
-.name-wrap {
-  padding: 30px;
 }
 
 .name {
@@ -349,16 +339,18 @@ img {
   text-align: center;
   margin-bottom: 10px;
 }
-
-.job {
+.name__wrap {
+  padding: 30px;
+}
+.name__job {
   text-align: center;
   line-height: 1.18;
 }
 
-.socials-list {
+.socials__list {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   color: var(--text-color-gray);
   margin-left: auto;
   margin-right: auto;
@@ -366,68 +358,68 @@ img {
   margin-top: 16px;
 }
 
-.socials-item {
+.socials__item {
   fill: currentColor;
   border-radius: 50%;
   color: #afb1b8;
 }
-.socials-item:not(:last-child) {
+.socials__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.socials-link {
+.socials__link {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.socials-link:hover, .socials-link:focus {
+.socials__link:hover, .socials__link:focus {
   color: var(--text-color-white);
   background-color: var(--accent-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.socials-icon {
+.socials__icon {
   fill: currentColor;
 }
-.socials-icon:hover {
+.socials__icon:hover {
   fill: var(--text-color-white);
 }
 
-.clients-list {
+.clients__list {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   padding: 0px;
   color: #afb1b8;
 }
 
-.clients-icon {
+.clients__icon {
   fill: currentColor;
 }
 
-.clients-item {
+.clients__item {
   flex-basis: calc((100% - var(--gap) * 5) / 6);
 }
-.clients-item:not(:last-child) {
+.clients__item:not(:last-child) {
   margin-right: var(--gap);
 }
 
-.clients-link {
+.clients__link {
   display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100%;
   padding-top: 16px;
   padding-bottom: 16px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  align-items: center;
-  justify-content: center;
   transition: border-color 250ms var(--timing-function), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.clients-link:hover, .clients-link:focus {
+.clients__link:hover, .clients__link:focus {
   border-color: 1px solid var(--accent-color);
   color: var(--accent-color);
   outline: none;
@@ -451,25 +443,21 @@ address {
   font-style: normal;
 }
 
-address ul {
-  padding-left: 0px;
-  margin: 0px;
-}
-
-.address-container {
-  margin-right: 70px;
-}
-
 .address {
   color: var(--text-color-white);
 }
-
-.address-link {
+.address__list {
+  padding-left: 0px;
+  margin: 0px;
+}
+.address__container {
+  margin-right: 70px;
+}
+.address__link {
   color: rgba(255, 255, 255, 0.6);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.address-item:not(:last-child) {
+.address__item:not(:last-child) {
   margin-bottom: 9px;
 }
 
@@ -482,21 +470,47 @@ address ul {
   margin-bottom: 20px;
 }
 
-.join .socials-link {
+.join .socials__link {
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--text-color-white);
 }
-.join .socials-link:hover {
+.join .socials__link:hover {
   background-color: var(--accent-color);
   outline: none;
 }
 
-.subscribe-us {
+.subscribe {
   margin-left: auto;
 }
-
-.subscribe-input {
+.subscribe__input {
   color: #ffffff;
+}
+.subscribe__btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-left: 12px;
+  background-color: var(--accent-color);
+  border: 1px solid var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  cursor: pointer;
+}
+.subscribe__btn:hover, .subscribe__btn:focus {
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.subscribe__icon {
+  margin-left: 10px;
 }
 
 #email {
@@ -510,42 +524,6 @@ address ul {
   padding-top: 15px;
   padding-bottom: 15px;
   padding-left: 15px;
-}
-
-.subscribe-btn {
-  display: inline-flex;
-  align-items: center;
-  text-align: center;
-  justify-content: center;
-  margin-left: 12px;
-  background-color: var(--accent-color);
-  border: 1px solid var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  width: 200px;
-  height: 50px;
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.875;
-  letter-spacing: 0.06em;
-  color: #ffffff;
-  cursor: pointer;
-}
-.subscribe-btn:hover, .subscribe-btn:focus {
-  background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-}
-
-.subscribe-icon {
-  margin-left: 10px;
-}
-
-.justify-btn {
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
 }
 
 .backdrop {
@@ -579,28 +557,28 @@ address ul {
   margin-top: 30px;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.1666666667;
+  line-height: 1.17;
   letter-spacing: 0.01em;
   color: #757575;
 }
-.modal-title {
+.modal__title {
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 0.8695652174;
+  line-height: 1.15;
   text-align: center;
   letter-spacing: 0.03em;
   color: #212121;
 }
-.modal-close-btn {
+.modal__close-btn {
   position: absolute;
   display: block;
   right: 8px;
   top: 8px;
   display: flex;
-  align-content: center;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  align-content: center;
   background-color: #ffffff;
   cursor: pointer;
   background-color: rgb(255, 255, 255);
@@ -609,11 +587,11 @@ address ul {
   height: 30px;
   width: 30px;
 }
-.modal-close-btn:hover {
+.modal__close-btn:hover {
   fill: var(--accent-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form {
+.modal__form {
   padding: 0 40px;
 }
 
@@ -622,7 +600,7 @@ address ul {
   position: relative;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.1666666667;
+  line-height: 1.17;
   letter-spacing: 0.01em;
   color: #757575;
   margin-top: 10px;
@@ -639,7 +617,7 @@ address ul {
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.1666666667;
+  line-height: 1.17;
   letter-spacing: 0.01em;
   padding: 12px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -659,7 +637,7 @@ address ul {
   transform: translateY(-50%);
 }
 
-.modal-input {
+.modal__input {
   width: 100%;
   height: 40px;
   padding-left: 30px;
@@ -667,14 +645,14 @@ address ul {
   border-radius: 4px;
   margin-top: 4px;
 }
-.modal-input:focus-visible {
+.modal__input:focus-visible {
   outline: 1px solid var(--accent-color);
 }
-.modal-input:focus {
+.modal__input:focus {
   border-color: var(--accent-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus + .form-icon {
+.modal__input:focus + .form-icon {
   fill: var(--accent-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -686,13 +664,12 @@ address ul {
 
 .terms-of-use {
   display: flex;
-  margin-top: 20px;
+  align-items: center;
+  justify-content: center;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
+  margin-top: 20px;
 }
 .terms-of-use-link {
   margin-left: 4px;
@@ -703,24 +680,20 @@ address ul {
   text-decoration: none;
 }
 
-.check-icon {
-  fill: transparent;
-}
-
-.terms-check:checked + .chek-text {
+.terms-check:checked + .chek__text {
   background-color: var(--accent-color);
   border: none;
 }
-.terms-check:checked + .chek-text .check-icon {
+.terms-check:checked + .chek__text .check__icon {
   fill: #ffffff;
   border-radius: 2px;
 }
 
-.terms-check:focus + .chek-text {
+.terms-check:focus + .chek__text {
   border-color: var(--accent-color);
 }
 
-.chek-text {
+.chek__text {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -731,56 +704,73 @@ address ul {
   margin-right: 4px;
 }
 
-.btn-send {
+.check__icon {
+  fill: transparent;
+}
+
+.btn__send {
   display: flex;
-  margin-top: 30px;
-  margin-left: auto;
-  margin-right: auto;
+  align-items: center;
+  justify-content: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  text-align: center;
+  letter-spacing: 0.06em;
+  background-color: var(--accent-color);
+  color: var(--text-color-white);
+  cursor: pointer;
+  margin: 30px auto auto auto;
   padding: 10px 55px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
   border-radius: 4px;
   transition: background-color 250ms var(--timing-function), filter 250ms var(--timing-function);
 }
-.btn-send:hover, .btn-send:focus {
+.btn__send:hover, .btn__send:focus {
   background: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
 
-.porfolio-nav {
+.portfolio {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   padding: 0px;
   margin: 0 auto 50px;
 }
-.porfolio-nav button {
+.portfolio button {
   padding: 6px 22px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.porfolio-nav_filter {
+.portfolio__filter {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   display: flex;
-  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
-.porfolio-nav_filter:not(:first-child) {
+.portfolio__filter:not(:first-child) {
   margin-left: 8px;
 }
-
-.portfolio-list {
+.portfolio__list {
   display: flex;
   flex-wrap: wrap;
   margin-left: -30px;
   padding: 0px;
 }
-.portfolio-list li:nth-child(3n) {
+.portfolio__list li:nth-child(3n) {
   margin-right: 0px;
 }
-.portfolio-list li:nth-last-child(-n+3) {
+.portfolio__list li:nth-last-child(-n+3) {
   margin-bottom: 0px;
+}
+.portfolio__descripion {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
 }
 
 .item {
@@ -788,37 +778,28 @@ address ul {
   margin-right: 30px;
   margin-bottom: 30px;
 }
-
-.item-link {
+.item__link {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.item-link:hover, .item-link:focus {
+.item__link:hover, .item__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   outline: none;
   color: inherit;
 }
-.item-link:hover .overlay, .item-link:focus .overlay {
+.item__link:hover .overlay, .item__link:focus .overlay {
   transition: transform 250ms var(--timing-function);
   transform: translateY(0%);
   transition-delay: 0ms;
 }
-
-.items-border {
+.item__description {
+  margin-top: 4px;
+}
+.item__border {
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   padding: 20px 24px;
-}
-
-.portfolio-descripion {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-}
-
-.item-description {
-  margin-top: 4px;
 }
 
 .card-thumb {
@@ -834,8 +815,8 @@ address ul {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   transition: transform 250ms var(--timing-function);
   transform: translateY(101%);
   background: rgba(33, 150, 243, 0.9);
