--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -1,11 +1,9 @@
-.button-style {
+.button__style {
   background: var(--button-background);
   border-radius: 4px;
   border: 1px solid transparent;
   text-align: center;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
+  @include fontProperties(500, 16px, 1.6);
   cursor: pointer;
 
   &:hover,
@@ -18,14 +16,11 @@
   }
 }
 
-.hero-button {
-  font-weight: 700;
+.hero__button {
+  @include fontProperties(700, 16px, 1.87);
   letter-spacing: 0.06em;
   background-color: var(--accent-color);
   color: var(--text-color-white);
-  height: 50px;
-  align-items: center;
-  justify-content: center;
   border: 1px solid var(--accent-color);
   margin: 0 auto;
   padding: 10px 32px;
