--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,23 +1,20 @@
 .nav {
-  display: flex;
-  align-items: center;
+  @include flexCentr($fl: flex, $ai: center, $jc: null);
   margin-left: 93px;
 
-  &-list {
-    display: flex;
-    align-items: center;
+  &__list {
+    @include flexCentr($fl: flex, $ai: center, $jc: null);
     padding-left: 0px;
-
-    &_item li:not(:last-child) {
-      margin-right: 50px;
-    }
-
-    &_item:not(:last-child) {
-      margin-right: 50px;
-    }
+  }
+  &__item li:not(:last-child) {
+    margin-right: 50px;
   }
 
-  &_link {
+  &__item:not(:last-child) {
+    margin-right: 50px;
+  }
+
+  &__link {
     padding-top: 32px;
     padding-bottom: 32px;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -27,7 +24,7 @@
   }
 }
 
-.current {
+.nav__link--current {
   position: relative;
   &::after {
     content: "";
