--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -26,6 +26,7 @@
 
 .nav__link--current {
   position: relative;
+  color: var(--accent-color);
   &::after {
     content: "";
     position: absolute;
