--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,7 @@ img {
 
 .nav__link--current {
   position: relative;
+  color: var(--accent-color);
 }
 .nav__link--current::after {
   content: "";
@@ -176,24 +177,24 @@ img {
   justify-content: center;
   margin-left: auto;
 }
-.contact_item {
+.contact__item {
   color: var(--text-color-gray);
   display: block;
 }
-.contact_item:not(:last-child) {
+.contact__item:not(:last-child) {
   margin-right: 50px;
 }
-.contact_link {
+.contact__link {
   display: flex;
   align-items: center;
   justify-content: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact_icon {
+.contact__icon {
   fill: currentColor;
   margin-right: 10px;
 }
-.contact_icon:hover, .contact_icon:focus {
+.contact__icon:hover, .contact__icon:focus {
   fill: var(--accent-color);
 }
 
@@ -210,6 +211,13 @@ img {
 .button__style:hover, .button__style:focus {
   background-color: var(--accent-color);
   color: var(--text-color-white);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.button__style--active {
+  color: var(--text-color-white);
+  background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
@@ -288,6 +296,11 @@ img {
   margin-bottom: 10px;
 }
 
+.benefits__about {
+  font-size: 14px;
+  padding-top: 0;
+}
+
 .about {
   font-size: 14px;
   padding-top: 0;
@@ -330,8 +343,7 @@ img {
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
 }
-
-.name {
+.team__name {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -339,10 +351,10 @@ img {
   text-align: center;
   margin-bottom: 10px;
 }
-.name__wrap {
+.team__wrap {
   padding: 30px;
 }
-.name__job {
+.team__job {
   text-align: center;
   line-height: 1.18;
 }
@@ -551,7 +563,7 @@ address {
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding-top: 40px;
+  padding: 40px 40px;
   width: 528px;
   height: 581px;
   margin-top: 30px;
@@ -590,9 +602,6 @@ address {
 .modal__close-btn:hover {
   fill: var(--accent-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.modal__form {
-  padding: 0 40px;
 }
 
 .user-data {
@@ -767,47 +776,50 @@ address {
 .portfolio__list li:nth-last-child(-n+3) {
   margin-bottom: 0px;
 }
-.portfolio__descripion {
+.portfolio__title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
 }
 
-.item {
+.portfolio__item {
   flex-basis: calc((100% - var(--gap) * (var(--cols))) / var(--cols));
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.item__link {
+
+.portfolio__link {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.item__link:hover, .item__link:focus {
+.portfolio__link:hover, .portfolio__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   outline: none;
   color: inherit;
 }
-.item__link:hover .overlay, .item__link:focus .overlay {
+.portfolio__link:hover .portfolio__overlay, .portfolio__link:focus .portfolio__overlay {
   transition: transform 250ms var(--timing-function);
   transform: translateY(0%);
   transition-delay: 0ms;
 }
-.item__description {
+
+.portfolio__descripion {
   margin-top: 4px;
 }
-.item__border {
+
+.portfolio__border {
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   padding: 20px 24px;
 }
 
-.card-thumb {
+.portfolio__thumb {
   position: relative;
   overflow: hidden;
 }
 
-.overlay {
+.portfolio__overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -822,7 +834,7 @@ address {
   background: rgba(33, 150, 243, 0.9);
 }
 
-.relation {
+.portfolio__relation {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.5;
