--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -15,6 +15,13 @@
     border-radius: 4px;
   }
 }
+.button__style--active {
+  color: var(--text-color-white);
+  background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
 
 .hero__button {
   @include fontProperties(700, 16px, 1.87);
