--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -2,7 +2,7 @@
   @include flexCentr;
   margin-left: auto;
 
-  &_item {
+  &__item {
     color: var(--text-color-gray);
     display: block;
     &:not(:last-child) {
@@ -10,14 +10,14 @@
     }
   }
 
-  &_link {
+  &__link {
     display: flex;
     align-items: center;
     justify-content: center;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  &_icon {
+  &__icon {
     fill: currentColor;
     margin-right: 10px;
     &:hover,
