--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -24,7 +24,7 @@
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding-top: 40px;
+  padding: 40px 40px;
   width: 528px;
   height: 581px;
   margin-top: 30px;
@@ -60,10 +60,6 @@
       fill: var(--accent-color);
       transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-  }
-
-  &__form {
-    padding: 0 40px;
   }
 }
 
