--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./utils/placeholder";
+@import "./utils/mixins";
 @import "./utils/variables";
 @import "./base/reset";
 @import "./layout/header";
